--- a/app.yaml
+++ b/app.yaml
@@ -9,5 +9,8 @@ handlers:
   static_files: static/index.html
 - url: /static
   static_dir: static
+- url: /embed/.*
+  upload: iframe.html
+  static_files: static/iframe.html
 - url: /.*
   script: _go_app
